fix: navbar wrap auto

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     display: block;
     position: fixed;
     max-width: 100%;
-    width: 480px;
+    width: auto;
     margin-left: auto;
     margin-right: auto;
     left: 0px;
